Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44049

HiDPI images are not loaded with aliases without extension

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.4.2
    • 5.4.0
    • None
    • OSX Retina mode
    • 4d76e4fd35e90356b3115fb64df853849f4ffcbc

    Description

      Run the attached example with HiDPI resolution. Larger icons should be used, but if the alias name does not have extension in resource file, wrong icon is loaded.

          <qresource prefix="/icons">
              <file alias="project.png">Resources/Icons/mode_Project.png</file>
              <file alias="project@2x.png">Resources/Icons/mode_Project@2x.png</file>
              <file alias="reference">Resources/Icons/mode_Reference.png</file>
              <file alias="reference@2x">Resources/Icons/mode_Reference@2x.png</file>
          </qresource>
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            con Eike Ziller
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes